force-app/main/default/objects/Custom_Clone_Fields__mdt/Custom_Clone_Fields__mdt.object-meta.xml
<CustomObject>
    <label>Custom Clone Field</label>
    <pluralLabel>Custom Clone Fields</pluralLabel>
</CustomObject>