force-app/main/default/objects/Custom_Clone_Fields__mdt/fields/Clear_Clone__c.field-meta.xml
<CustomField>
    <fullName>Clear_Clone__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Clear &amp; Clone</label>
    <type>Checkbox</type>
</CustomField>