force-app/main/default/objects/Custom_Clone_Fields__mdt/fields/Clone__c.field-meta.xml
<CustomField>
    <fullName>Clone__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Clone</label>
    <type>Checkbox</type>
</CustomField>