force-app/main/default/objects/Custom_Clone_Fields__mdt/fields/Field_value__c.field-meta.xml
<CustomField>
    <fullName>Field_value__c</fullName>
    <label>Field value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>