force-app/main/default/objects/Custom_Clone_Fields__mdt/fields/html_id__c.field-meta.xml
<CustomField>
    <fullName>html_id__c</fullName>
    <label>HTML ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>